Change Log:

**2/23/16**

- Fixed logic in parsing leaderboard data

**1/11/17**
- Added Danetta's Spite Set Bonus (Vault costs 8 hatred)
- When equipped with Danetta's Spite and Action Shot rune is selected for Vault and Focus+Restraint equipped, Vault will be used to keep the spender buff up

**1/6/17**
- Hellcat damage bonus no longer applies to Sentries
- Hellcat damage adjusted by proc coefficient. Note: currently it is believed that Hellcat has an universal Proc Coefficient of 50%, regardless of skill. This is currently implemented in the calculator as "all or nothing" (i.e. you either get 0 bounces, or 3-5 bounces, based on the belt's legendary power value).
- Hellcat now affects Grenade (primary skill)

**1/5/17**
- Added Hellcat Waistguard mechanics

**1/4/17**
- Updated (partially) for 2.4.3 (M6 to 1200%)

**10/26/16**
- Fixed FoK/Knives Expert to include RCR in hatred cost.
- Added option (on Skills tab) to only use Spender when Full Hatred (e.g. for when using Sword of Ill Will with FoK/Knives Expert). 

**9/16/16**
- Added Oculus Ring. Can be selected by player (worn or in cube), follower and/or other players. If multiple rings are specified, the buff is averaged (weighted by % uptime).

**9/14/16**
- Added "Max Hit" table that shows the maximum damage possible for each attack

**8/24/16**
- Fixed base hatred regen to be 4/second
- When importing a hero, if the paragon level is >= 797 and Karlei's Point is equipped, Paragon Hatred Points will be set to 50
- When importing a hero, if the paragon level is >= 798, all offensive Paragon points will be set to 50 
- When importing a hero, if the paragon level is >= 800 then Paragon RCR and Paragon AD points will be set to 50
- Moved Paragon Points to the Import panel, so that paragon points can easily be set before/after importing a hero
- Added paragon level input field (this will default to 0 until you import a hero)